--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GeminiWell - Seu Assistente de Bem-Estar</title>
-    <link rel="stylesheet" href="style/style.css">
+    <title>GeminiWell</title>
+    <link rel="stylesheet" href="/static/style/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>GeminiWell</h1>
+        <h1>Seu Assistente de Bem-Estar</h1>
         <div id="chatbox">
             <div id="chat-history">
                 <!-- Mensagens do chat -->
@@ -16,11 +16,10 @@
             <button id="hug-button">Abraçar</button> 
             <button id="clear-button">Limpar Chat</button> 
         </div>
+        <footer>
+            <p>Desenvolvido por Wellington Francisco Benicio</p>
+        </footer>
     </div>
-    <script src="scripts/script.js"></script>
-    <footer>
-        <p>Desenvolvido por Wellington Francisco Benicio</p>
-    </footer>
-    </div>
+    <script src="/static/script/script.js"></script>
 </body>
 </html>
