--- a/static/style/style.css
+++ b/static/style/style.css
@@ -3,6 +3,10 @@ body {
     background-color: #f2f2f2;
     margin: 0;
     padding: 0;
+    display: flex; 
+    flex-direction: column; 
+    display: flex; 
+    flex-direction: column;
 }
 
 .container {
@@ -12,6 +16,7 @@ body {
     justify-content: center;
     min-height: 100vh;
     padding: 20px;
+    flex: 1;
 }
 
 #chatbox {
@@ -59,7 +64,7 @@ body {
 }
 
 #hug-button:active {
-    transform: scale(0.95); 
+    transform: scale(0.95);
 }
 footer {
     text-align: center;
